# basic_users

./: docker-compose.yml  main.py  pyproject.toml
app/: app.py
app/api/v1/: users.py
app/core/: config.py  logging.py
app/db/: crud.py  setup_db.py
app/models/: user.py
app/services/: user_service.py
tests/: conftest.py  test_main.py
